--- a/public/style.css
+++ b/public/style.css
@@ -53,9 +53,21 @@ body{
         grid-template-columns: 1fr 1fr;
     }
 } */
+body{
+    box-sizing: border-box;
+}
+.repo-container, .user-container{
+    width: 1000px;
+    margin: 10px auto;
+    padding: 10px;
+    border: 1px solid black;
+}
+h1{
+    margin: 0 auto;
+}
 ul{
     list-style-type: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 
 }
